# simple-view3d

./: Cargo.toml  LICENSE  Makefile  README.md
src/: app_state.rs  axis3d.rs  cli.rs  command.rs  config.rs  content3d.rs  data.rs  gs_loader.rs  kiss3d_state.rs  main.rs  rendering.rs  ui.rs
src/app_state/: mod.rs  structs.rs
src/content3d/: coloring.rs  mod.rs
src/view3d/: axis3d.rs  data3d.rs  mod.rs
src/view3d/content3d/: mod.rs
