[package]
name = "simple-view3d"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }

kiss3d = "0.40.0"
properties3d = { git = "https://github.com/geomodel/properties3d.git" }
io3d = { git = "https://github.com/geomodel/io3d.git" }

[profile.release]
strip = true # Automatically strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
